@@ -1,3 +1,11 @@
+# SPDX-FileCopyrightText: 2017 John Mercouris <john@atlas.engineer>
+# SPDX-FileCopyrightText: 2017 Atlas Engineer LLC
+#
+# SPDX-License-Identifier: BSD-3-Clause
+
+# Atlas Engineer LLC
+
+
 [submodule "_build/alexandria"]
 	path = _build/alexandria
 	url = https://gitlab.common-lisp.net/alexandria/alexandria.git
