@@ -1,3 +1,11 @@
+# SPDX-FileCopyrightText: 2017 John Mercouris <john@atlas.engineer>
+# SPDX-FileCopyrightText: 2017 Atlas Engineer LLC
+#
+# SPDX-License-Identifier: BSD-3-Clause
+
+# Atlas Engineer LLC
+
+
 #+html: <img src="https://nyxt.atlas.engineer/static/image/nyxt_256x256.png" align="right"/>
 
 * Nyxt browser
