@@ -1,3 +1,10 @@
+# SPDX-FileCopyrightText: 2017 John Mercouris <john@atlas.engineer>
+# SPDX-FileCopyrightText: 2017 Atlas Engineer LLC
+#
+# SPDX-License-Identifier: BSD-3-Clause
+
+# Atlas Engineer LLC
+
 This directory contains all Common Lisp dependencies.  They are fetched via Git
 submodules.  This gives us good reproducibility and control, unlike with
 Quicklisp which might not have the right versions.
