@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2017-2022 2017 John Mercouris, <john@atlas.engineer> et al.
+#
+# SPDX-License-Identifier: BSD-3-Clause
+
 #+TITLE: Nyxt User Manual
 
 This manual has been moved.
